dma-fence: Fix safe access wrapper to call timeline name method (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1475,6 +1475,7 @@
 	patches.kernel.org/6.17.8-087-ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
 	patches.kernel.org/6.17.8-088-block-fix-op_is_zone_mgmt-to-handle-REQ_OP_ZON.patch
 	patches.kernel.org/6.17.8-089-block-make-REQ_OP_ZONE_OPEN-a-write-operation.patch
+	patches.kernel.org/6.17.8-090-dma-fence-Fix-safe-access-wrapper-to-call-time.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
