spi: spi-qpic-snand: handle 'use_ecc' parameter of qcom_spi_config_cw_read() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1507,6 +1507,7 @@
 	patches.kernel.org/6.17.8-119-firmware-qcom-scm-preserve-assign_mem-error-re.patch
 	patches.kernel.org/6.17.8-120-soc-qcom-smem-Fix-endian-unaware-access-of-num.patch
 	patches.kernel.org/6.17.8-121-spi-loopback-test-Don-t-use-pK-through-printk.patch
+	patches.kernel.org/6.17.8-122-spi-spi-qpic-snand-handle-use_ecc-parameter-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
