--- a/series.conf
+++ b/series.conf
@@ -1899,6 +1899,7 @@
 	patches.kernel.org/6.17.8-511-platform-x86-amd-pmf-Fix-the-custom-bios-input.patch
 	patches.kernel.org/6.17.8-512-selftests-traceroute-Use-require_command.patch
 	patches.kernel.org/6.17.8-513-selftests-traceroute-Return-correct-value-on-f.patch
+	patches.kernel.org/6.17.8-514-openrisc-Add-R_OR1K_32_PCREL-relocation-type-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
