wifi: mac80211: Get the correct interface for non-netdev skb status (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1985,6 +1985,7 @@
 	patches.kernel.org/6.17.8-597-iommu-vt-d-Replace-snprintf-with-scnprintf-in-.patch
 	patches.kernel.org/6.17.8-598-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 	patches.kernel.org/6.17.8-599-iommu-vt-d-Remove-LPIG-from-page-group-respons.patch
+	patches.kernel.org/6.17.8-600-wifi-mac80211-Get-the-correct-interface-for-no.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
