media: pci: ivtv: Don't create fake v4l2_fh (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1666,6 +1666,7 @@
 	patches.kernel.org/6.17.8-278-drm-amdkfd-return-ENOTTY-for-unsupported-IOCTL.patch
 	patches.kernel.org/6.17.8-279-selftests-drv-net-devmem-add-correct-the-IPv6-.patch
 	patches.kernel.org/6.17.8-280-selftests-drv-net-devmem-flip-the-direction-of.patch
+	patches.kernel.org/6.17.8-281-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
