scsi: ufs: core: Revert "Make HID attributes visible" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2139,6 +2139,7 @@
 	patches.kernel.org/6.17.8-751-riscv-stacktrace-Disable-KASAN-checks-for-non-.patch
 	patches.kernel.org/6.17.8-752-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts-.patch
 	patches.kernel.org/6.17.8-753-Revert-wifi-ath12k-Fix-missing-station-power-s.patch
+	patches.kernel.org/6.17.8-754-scsi-ufs-core-Revert-Make-HID-attributes-visib.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
