--- a/series.conf
+++ b/series.conf
@@ -1549,6 +1549,7 @@
 	patches.kernel.org/6.17.8-161-hwmon-sy7636a-add-alias.patch
 	patches.kernel.org/6.17.8-162-selftests-bpf-Fix-incorrect-array-size-calcula.patch
 	patches.kernel.org/6.17.8-163-block-check-for-valid-bio-while-splitting.patch
+	patches.kernel.org/6.17.8-164-irqchip-loongson-pch-lpc-Use-legacy-domain-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
