io_uring: fix regbuf vector size truncation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2200,6 +2200,7 @@
 	patches.kernel.org/6.17.8-812-rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.kernel.org/6.17.8-813-x86-microcode-AMD-Add-more-known-models-to-ent.patch
 	patches.kernel.org/6.17.8-814-smb-client-validate-change-notify-buffer-befor.patch
+	patches.kernel.org/6.17.8-815-io_uring-fix-regbuf-vector-size-truncation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
