--- a/series.conf
+++ b/series.conf
@@ -1539,6 +1539,7 @@
 	patches.kernel.org/6.17.8-151-thermal-intel-selftests-workload_hint-Mask-uns.patch
 	patches.kernel.org/6.17.8-152-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.kernel.org/6.17.8-153-hwmon-k10temp-Add-thermal-support-for-AMD-Fami.patch
+	patches.kernel.org/6.17.8-154-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
