--- a/series.conf
+++ b/series.conf
@@ -2135,6 +2135,7 @@
 	patches.kernel.org/6.17.8-747-tracing-tprobe-events-Fix-to-put-tracepoint_us.patch
 	patches.kernel.org/6.17.8-748-ring-buffer-Do-not-warn-in-ring_buffer_map_get.patch
 	patches.kernel.org/6.17.8-749-net-libwx-fix-device-bus-LAN-ID.patch
+	patches.kernel.org/6.17.8-750-scsi-ufs-core-Fix-a-race-condition-related-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
