--- a/series.conf
+++ b/series.conf
@@ -1638,6 +1638,7 @@
 	patches.kernel.org/6.17.8-250-drm-amdgpu-Skip-poison-aca-bank-from-UE-channe.patch
 	patches.kernel.org/6.17.8-251-drm-amd-display-add-more-cyan-skillfish-device.patch
 	patches.kernel.org/6.17.8-252-drm-amdgpu-Initialize-jpeg-v5_0_1-ras-function.patch
+	patches.kernel.org/6.17.8-253-drm-amdgpu-skip-mgpu-fan-boost-for-multi-vf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
