drm/amd/display: Add AVI infoframe copy in copy_stream_update_to_stream (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2007,6 +2007,7 @@
 	patches.kernel.org/6.17.8-619-tcp-Update-bind-bucket-state-on-port-release.patch
 	patches.kernel.org/6.17.8-620-ovl-make-sure-that-ovl_create_real-returns-a-h.patch
 	patches.kernel.org/6.17.8-621-drm-amd-display-Add-missing-post-flip-calls.patch
+	patches.kernel.org/6.17.8-622-drm-amd-display-Add-AVI-infoframe-copy-in-copy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
