--- a/series.conf
+++ b/series.conf
@@ -1802,6 +1802,7 @@
 	patches.kernel.org/6.17.8-414-dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 	patches.kernel.org/6.17.8-415-dmaengine-dw-edma-Set-status-for-callback_resu.patch
 	patches.kernel.org/6.17.8-416-netfilter-nf_tables-all-transaction-allocation.patch
+	patches.kernel.org/6.17.8-417-drm-msm-dsi-phy-Toggle-back-buffer-resync-afte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
