net: wwan: t7xx: add support for HP DRMR-H01 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2111,6 +2111,7 @@
 	patches.kernel.org/6.17.8-723-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Zephyr.patch
 	patches.kernel.org/6.17.8-724-rtc-zynqmp-Restore-alarm-functionality-after-k.patch
 	patches.kernel.org/6.17.8-725-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pcf.patch
+	patches.kernel.org/6.17.8-726-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
