--- a/series.conf
+++ b/series.conf
@@ -1808,6 +1808,7 @@
 	patches.kernel.org/6.17.8-420-drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 	patches.kernel.org/6.17.8-421-drm-amd-pm-Increase-SMC-timeout-on-SI-and-warn.patch
 	patches.kernel.org/6.17.8-422-move_mount-2-take-sanity-checks-in-beneath-cas.patch
+	patches.kernel.org/6.17.8-423-selftests-drv-net-rss_ctx-make-the-test-pass-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
