drm/xe: rework PDE PAT index selection (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1652,6 +1652,7 @@
 	patches.kernel.org/6.17.8-264-drm-amd-display-Reset-apply_eamless_boot_optim.patch
 	patches.kernel.org/6.17.8-265-drm-amdgpu-add-to-custom-amdgpu_drm_release-dr.patch
 	patches.kernel.org/6.17.8-266-drm-amd-display-Wait-until-OTG-enable-state-is.patch
+	patches.kernel.org/6.17.8-267-drm-xe-rework-PDE-PAT-index-selection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
