selftests: drv-net: rss_ctx: fix the queue count check (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1770,6 +1770,7 @@
 	patches.kernel.org/6.17.8-382-platform-x86-intel-uncore-freq-Fix-warning-in-.patch
 	patches.kernel.org/6.17.8-383-drm-msm-dpu-Filter-modes-based-on-adjusted-mod.patch
 	patches.kernel.org/6.17.8-384-drm-msm-Use-of_reserved_mem_region_to_resource.patch
+	patches.kernel.org/6.17.8-385-selftests-drv-net-rss_ctx-fix-the-queue-count-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
