scsi: pm80xx: Fix race condition caused by static variables (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1741,6 +1741,7 @@
 	patches.kernel.org/6.17.8-353-wifi-rtw89-coex-Limit-Wi-Fi-scan-slot-cost-to-.patch
 	patches.kernel.org/6.17.8-354-scsi-mpi3mr-Fix-I-O-failures-during-controller.patch
 	patches.kernel.org/6.17.8-355-scsi-mpi3mr-Fix-controller-init-failure-on-fau.patch
+	patches.kernel.org/6.17.8-356-scsi-pm80xx-Fix-race-condition-caused-by-stati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
