--- a/series.conf
+++ b/series.conf
@@ -1419,6 +1419,7 @@
 	patches.kernel.org/6.17.8-031-wifi-ath12k-free-skb-during-idr-cleanup-callba.patch
 	patches.kernel.org/6.17.8-032-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.kernel.org/6.17.8-033-drm-msm-Fix-GEM-free-for-imported-dma-bufs.patch
+	patches.kernel.org/6.17.8-034-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
