ASoC: Intel: avs: Disable periods-elapsed work when closing PCM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1436,6 +1436,7 @@
 	patches.kernel.org/6.17.8-048-crypto-s390-phmac-Do-not-modify-the-req-nbytes.patch
 	patches.kernel.org/6.17.8-049-crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.kernel.org/6.17.8-050-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-oc.patch
+	patches.kernel.org/6.17.8-051-ASoC-Intel-avs-Disable-periods-elapsed-work-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
