drm/amdgpu: Fix vcn v5.0.1 poison irq call trace (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1633,6 +1633,7 @@
 	patches.kernel.org/6.17.8-245-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-rese.patch
 	patches.kernel.org/6.17.8-246-drm-amdgpu-Effective-health-check-before-reset.patch
 	patches.kernel.org/6.17.8-247-drm-amd-amdgpu-Release-xcp-drm-memory-after-un.patch
+	patches.kernel.org/6.17.8-248-drm-amdgpu-Fix-vcn-v5.0.1-poison-irq-call-trac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
