--- a/series.conf
+++ b/series.conf
@@ -1933,6 +1933,7 @@
 	patches.kernel.org/6.17.8-545-wifi-mt76-use-altx-queue-for-offchannel-tx-on-.patch
 	patches.kernel.org/6.17.8-546-wifi-mt76-improve-phy-reset-on-hw-restart.patch
 	patches.kernel.org/6.17.8-547-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_.patch
+	patches.kernel.org/6.17.8-548-drm-amdgpu-validate-userq-buffer-virtual-addre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
