scsi: ufs: ufs-pci: Set UFSHCD_QUIRK_PERFORM_LINK_STARTUP_ONCE for Intel ADL (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2216,6 +2216,7 @@
 	patches.kernel.org/6.17.8-828-virtio_net-fix-alignment-for-virtio_net_hdr_v1.patch
 	patches.kernel.org/6.17.8-829-lib-crypto-curve25519-hacl64-Fix-older-clang-K.patch
 	patches.kernel.org/6.17.8-830-scsi-ufs-ufs-pci-Fix-S0ix-S3-for-Intel-control.patch
+	patches.kernel.org/6.17.8-831-scsi-ufs-ufs-pci-Set-UFSHCD_QUIRK_PERFORM_LINK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
