--- a/series.conf
+++ b/series.conf
@@ -1851,6 +1851,7 @@
 	patches.kernel.org/6.17.8-463-usb-cdns3-gadget-Use-after-free-during-failed-.patch
 	patches.kernel.org/6.17.8-464-serial-qcom-geni-Add-DFS-clock-mode-support-to.patch
 	patches.kernel.org/6.17.8-465-serdev-Drop-dev_pm_domain_detach-call.patch
+	patches.kernel.org/6.17.8-466-tty-vt-Add-missing-return-value-for-VT_RESIZE-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
