--- a/series.conf
+++ b/series.conf
@@ -1675,6 +1675,7 @@
 	patches.kernel.org/6.17.8-287-drm-tidss-Remove-early-fb.patch
 	patches.kernel.org/6.17.8-288-RDMA-mana_ib-Drain-send-wrs-of-GSI-QP.patch
 	patches.kernel.org/6.17.8-289-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_.patch
+	patches.kernel.org/6.17.8-290-PCI-ERR-Update-device-error_state-already-afte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
