bpftool: Fix -Wuninitialized-const-pointer warnings with clang >= 21 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1577,6 +1577,7 @@
 	patches.kernel.org/6.17.8-189-io_uring-zcrx-account-niov-arrays-to-cgroup.patch
 	patches.kernel.org/6.17.8-190-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 	patches.kernel.org/6.17.8-191-power-supply-qcom_battmgr-handle-charging-stat.patch
+	patches.kernel.org/6.17.8-192-bpftool-Fix-Wuninitialized-const-pointer-warni.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
