--- a/series.conf
+++ b/series.conf
@@ -2205,6 +2205,7 @@
 	patches.kernel.org/6.17.8-817-perf-core-Fix-system-hang-caused-by-cpu-clock-.patch
 	patches.kernel.org/6.17.8-818-x86-amd_node-Fix-AMD-root-device-caching.patch
 	patches.kernel.org/6.17.8-819-xfs-fix-delalloc-write-failures-in-software-pr.patch
+	patches.kernel.org/6.17.8-820-xfs-fix-various-problems-in-xfs_atomic_write_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
