net: phy: dp83640: improve phydev and driver removal handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2016,6 +2016,7 @@
 	patches.kernel.org/6.17.8-628-NFSv4.1-fix-mount-hang-after-CREATE_SESSION-fa.patch
 	patches.kernel.org/6.17.8-629-nfs4_setup_readdir-insufficient-locking-for-d_.patch
 	patches.kernel.org/6.17.8-630-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN-.patch
+	patches.kernel.org/6.17.8-631-net-phy-dp83640-improve-phydev-and-driver-remo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
