--- a/series.conf
+++ b/series.conf
@@ -1564,6 +1564,7 @@
 	patches.kernel.org/6.17.8-176-ACPICA-dispatcher-Use-acpi_ds_clear_operands-i.patch
 	patches.kernel.org/6.17.8-177-tee-allow-a-driver-to-allocate-a-tee_device-wi.patch
 	patches.kernel.org/6.17.8-178-nvmet-fc-avoid-scheduling-association-deletion.patch
+	patches.kernel.org/6.17.8-179-nvme-fc-use-lock-accessing-port_state-and-rpor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
