--- a/series.conf
+++ b/series.conf
@@ -2203,6 +2203,7 @@
 	patches.kernel.org/6.17.8-815-io_uring-fix-regbuf-vector-size-truncation.patch
 	patches.kernel.org/6.17.8-816-smb-client-fix-potential-UAF-in-smb2_close_cac.patch
 	patches.kernel.org/6.17.8-817-perf-core-Fix-system-hang-caused-by-cpu-clock-.patch
+	patches.kernel.org/6.17.8-818-x86-amd_node-Fix-AMD-root-device-caching.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
