media: i2c: Kconfig: Ensure a dependency on HAVE_CLK for VIDEO_CAMERA_SENSOR (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1674,6 +1674,7 @@
 	patches.kernel.org/6.17.8-286-drm-tidss-Set-crtc-modesetting-parameters-with.patch
 	patches.kernel.org/6.17.8-287-drm-tidss-Remove-early-fb.patch
 	patches.kernel.org/6.17.8-288-RDMA-mana_ib-Drain-send-wrs-of-GSI-QP.patch
+	patches.kernel.org/6.17.8-289-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
