--- a/series.conf
+++ b/series.conf
@@ -1570,6 +1570,7 @@
 	patches.kernel.org/6.17.8-182-bpf-Do-not-limit-bpf_cgroup_from_id-to-current.patch
 	patches.kernel.org/6.17.8-183-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wil.patch
 	patches.kernel.org/6.17.8-184-rust-kunit-allow-cfg-on-test-s.patch
+	patches.kernel.org/6.17.8-185-video-backlight-lp855x_bl-Set-correct-EPROM-st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
