--- a/series.conf
+++ b/series.conf
@@ -1522,6 +1522,7 @@
 	patches.kernel.org/6.17.8-134-irqchip-loongson-eiointc-Route-interrupt-parse.patch
 	patches.kernel.org/6.17.8-135-io_uring-zctx-check-chained-notif-contexts.patch
 	patches.kernel.org/6.17.8-136-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-o.patch
+	patches.kernel.org/6.17.8-137-ACPI-video-force-native-for-Lenovo-82K8.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
