HID: asus: add Z13 folio to generic group for multitouch to work (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1910,6 +1910,7 @@
 	patches.kernel.org/6.17.8-522-net-devmem-expose-tcp_recvmsg_locked-errors.patch
 	patches.kernel.org/6.17.8-523-selftests-net-lib.sh-Don-t-defer-failed-comman.patch
 	patches.kernel.org/6.17.8-524-udp_tunnel-use-netdev_warn-instead-of-netdev_W.patch
+	patches.kernel.org/6.17.8-525-HID-asus-add-Z13-folio-to-generic-group-for-mu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
