Fix access to video_is_primary_device() when compiled without CONFIG_VIDEO (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1889,6 +1889,7 @@
 	patches.kernel.org/6.17.8-501-wifi-mac80211-Fix-HE-capabilities-element-chec.patch
 	patches.kernel.org/6.17.8-502-fbcon-Use-screen-info-to-find-primary-device.patch
 	patches.kernel.org/6.17.8-503-phy-cadence-cdns-dphy-Enable-lower-resolutions.patch
+	patches.kernel.org/6.17.8-504-Fix-access-to-video_is_primary_device-when-com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
