--- a/series.conf
+++ b/series.conf
@@ -2221,6 +2221,7 @@
 	patches.kernel.org/6.17.8-833-scsi-ufs-core-Fix-invalid-probe-error-return-v.patch
 	patches.kernel.org/6.17.8-834-drm-amd-display-update-color-on-atomic-commit-.patch
 	patches.kernel.org/6.17.8-835-extcon-adc-jack-Cleanup-wakeup-source-only-if-.patch
+	patches.kernel.org/6.17.8-836-kunit-Extend-kconfig-help-text-for-KUNIT_UML_P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
