wifi: iwlwifi: fix potential use after free in iwl_mld_remove_link() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1422,6 +1422,7 @@
 	patches.kernel.org/6.17.8-034-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.kernel.org/6.17.8-035-drm-msm-make-sure-last_fence-is-always-updated.patch
 	patches.kernel.org/6.17.8-036-ALSA-usb-audio-fix-control-pipe-direction.patch
+	patches.kernel.org/6.17.8-037-wifi-iwlwifi-fix-potential-use-after-free-in-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
