drm/amd/display: Fix vupdate_offload_work doc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2226,6 +2226,7 @@
 	patches.kernel.org/6.17.8-838-ACPI-SPCR-Check-for-table-version-when-using-p.patch
 	patches.kernel.org/6.17.8-839-kbuild-Strip-trailing-padding-bytes-from-modul.patch
 	patches.kernel.org/6.17.8-840-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0_.patch
+	patches.kernel.org/6.17.8-841-drm-amd-display-Fix-vupdate_offload_work-doc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
