hwmon: (dell-smm) Add support for Dell OptiPlex 7040 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1595,6 +1595,7 @@
 	patches.kernel.org/6.17.8-207-uprobe-Do-not-emulate-sstep-original-instructi.patch
 	patches.kernel.org/6.17.8-208-hwmon-asus-ec-sensors-increase-timeout-for-loc.patch
 	patches.kernel.org/6.17.8-209-hwmon-dell-smm-Remove-Dell-Precision-490-custo.patch
+	patches.kernel.org/6.17.8-210-hwmon-dell-smm-Add-support-for-Dell-OptiPlex-7.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
