--- a/series.conf
+++ b/series.conf
@@ -1426,6 +1426,7 @@
 	patches.kernel.org/6.17.8-038-ASoC-cs-amp-lib-test-Fix-missing-include-of-ku.patch
 	patches.kernel.org/6.17.8-039-wifi-mac80211-reset-FILS-discovery-and-unsol-p.patch
 	patches.kernel.org/6.17.8-040-wifi-mac80211-fix-key-tailroom-accounting-leak.patch
+	patches.kernel.org/6.17.8-041-wifi-nl80211-call-kfree-without-a-NULL-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
