char: misc: Make misc_register() reentry for miscdevice who wants dynamic minor (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1715,6 +1715,7 @@
 	patches.kernel.org/6.17.8-327-wifi-rtw89-fix-BSSID-comparison-for-non-transm.patch
 	patches.kernel.org/6.17.8-328-wifi-rtw89-8851b-rfk-update-IQK-TIA-setting.patch
 	patches.kernel.org/6.17.8-329-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
+	patches.kernel.org/6.17.8-330-char-misc-Make-misc_register-reentry-for-miscd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
