drm/amdgpu: add to custom amdgpu_drm_release drm_dev_enter/exit (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1650,6 +1650,7 @@
 	patches.kernel.org/6.17.8-262-ASoC-tas2781-Add-keyword-init-in-profile-secti.patch
 	patches.kernel.org/6.17.8-263-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-j.patch
 	patches.kernel.org/6.17.8-264-drm-amd-display-Reset-apply_eamless_boot_optim.patch
+	patches.kernel.org/6.17.8-265-drm-amdgpu-add-to-custom-amdgpu_drm_release-dr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
