--- a/series.conf
+++ b/series.conf
@@ -2029,6 +2029,7 @@
 	patches.kernel.org/6.17.8-641-ASoC-renesas-msiof-tidyup-DMAC-stop-timing.patch
 	patches.kernel.org/6.17.8-642-ASoC-renesas-msiof-set-SIFCTR-register.patch
 	patches.kernel.org/6.17.8-643-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoid.patch
+	patches.kernel.org/6.17.8-644-ext4-increase-IO-priority-of-fastcommit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
