kbuild: uapi: Strip comments before size type check (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2112,6 +2112,7 @@
 	patches.kernel.org/6.17.8-724-rtc-zynqmp-Restore-alarm-functionality-after-k.patch
 	patches.kernel.org/6.17.8-725-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pcf.patch
 	patches.kernel.org/6.17.8-726-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
+	patches.kernel.org/6.17.8-727-kbuild-uapi-Strip-comments-before-size-type-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
