f2fs: fix infinite loop in __insert_extent_tree() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1965,6 +1965,7 @@
 	patches.kernel.org/6.17.8-577-allow-finish_no_open-file-ERR_PTR-E.patch
 	patches.kernel.org/6.17.8-578-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support.patch
 	patches.kernel.org/6.17.8-579-usb-xhci-plat-Facilitate-using-autosuspend-for.patch
+	patches.kernel.org/6.17.8-580-f2fs-fix-infinite-loop-in-__insert_extent_tree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
