drm/amd/pm: Use cached metrics data on arcturus (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1642,6 +1642,7 @@
 	patches.kernel.org/6.17.8-254-drm-amd-display-fix-dmub-access-race-condition.patch
 	patches.kernel.org/6.17.8-255-drm-amd-display-update-dpp-disp-clock-from-smu.patch
 	patches.kernel.org/6.17.8-256-drm-amd-pm-Use-cached-metrics-data-on-aldebara.patch
+	patches.kernel.org/6.17.8-257-drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
