uprobe: Do not emulate/sstep original instruction when ip is changed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1592,6 +1592,7 @@
 	patches.kernel.org/6.17.8-204-bpf-Clear-pfmemalloc-flag-when-freeing-all-fra.patch
 	patches.kernel.org/6.17.8-205-selftests-drv-net-Pull-data-before-parsing-hea.patch
 	patches.kernel.org/6.17.8-206-nvme-Use-non-zero-KATO-for-persistent-discover.patch
+	patches.kernel.org/6.17.8-207-uprobe-Do-not-emulate-sstep-original-instructi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
