Bluetooth: MGMT: fix crash in set_mesh_sync and set_mesh_complete (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1446,6 +1446,7 @@
 	patches.kernel.org/6.17.8-058-Bluetooth-ISO-Fix-BIS-connection-dst_type-hand.patch
 	patches.kernel.org/6.17.8-059-Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT.patch
 	patches.kernel.org/6.17.8-060-Bluetooth-HCI-Fix-tracking-of-advertisement-se.patch
+	patches.kernel.org/6.17.8-061-Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
