pmdomain: apple: Add "apple,t8103-pmgr-pwrstate" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1575,6 +1575,7 @@
 	patches.kernel.org/6.17.8-187-io_uring-zcrx-check-all-niovs-filled-with-dma-.patch
 	patches.kernel.org/6.17.8-188-tools-cpupower-fix-error-return-value-in-cpupo.patch
 	patches.kernel.org/6.17.8-189-io_uring-zcrx-account-niov-arrays-to-cgroup.patch
+	patches.kernel.org/6.17.8-190-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
