--- a/series.conf
+++ b/series.conf
@@ -1796,6 +1796,7 @@
 	patches.kernel.org/6.17.8-408-media-nxp-imx8-isi-Fix-streaming-cleanup-on-re.patch
 	patches.kernel.org/6.17.8-409-wifi-iwlwifi-pcie-remember-when-interrupts-are.patch
 	patches.kernel.org/6.17.8-410-drm-st7571-i2c-add-support-for-inverted-pixel-.patch
+	patches.kernel.org/6.17.8-411-ptp-Limit-time-setting-of-PTP-clocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
