--- a/series.conf
+++ b/series.conf
@@ -1667,6 +1667,7 @@
 	patches.kernel.org/6.17.8-279-selftests-drv-net-devmem-add-correct-the-IPv6-.patch
 	patches.kernel.org/6.17.8-280-selftests-drv-net-devmem-flip-the-direction-of.patch
 	patches.kernel.org/6.17.8-281-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
+	patches.kernel.org/6.17.8-282-media-amphion-Delete-v4l2_fh-synchronously-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
