--- a/series.conf
+++ b/series.conf
@@ -1888,6 +1888,7 @@
 	patches.kernel.org/6.17.8-500-wifi-cfg80211-update-the-time-stamps-in-hidden.patch
 	patches.kernel.org/6.17.8-501-wifi-mac80211-Fix-HE-capabilities-element-chec.patch
 	patches.kernel.org/6.17.8-502-fbcon-Use-screen-info-to-find-primary-device.patch
+	patches.kernel.org/6.17.8-503-phy-cadence-cdns-dphy-Enable-lower-resolutions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
