--- a/series.conf
+++ b/series.conf
@@ -1430,6 +1430,7 @@
 	patches.kernel.org/6.17.8-042-kunit-test_dev_action-Correctly-cast-priv-poin.patch
 	patches.kernel.org/6.17.8-043-bpf-Sync-pending-IRQ-work-before-freeing-ring-.patch
 	patches.kernel.org/6.17.8-044-scsi-ufs-core-Initialize-value-of-an-attribute.patch
+	patches.kernel.org/6.17.8-045-scsi-core-Fix-the-unit-attention-counter-imple.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
