drm/amdgpu: Fix build error when CONFIG_SUSPEND is disabled (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1628,6 +1628,7 @@
 	patches.kernel.org/6.17.8-240-drm-xe-guc-Add-more-GuC-load-error-status-code.patch
 	patches.kernel.org/6.17.8-241-drm-xe-Fix-oops-in-xe_gem_fault-when-running-c.patch
 	patches.kernel.org/6.17.8-242-drm-xe-pf-Don-t-resume-device-from-restart-wor.patch
+	patches.kernel.org/6.17.8-243-drm-amdgpu-Fix-build-error-when-CONFIG_SUSPEND.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
