--- a/series.conf
+++ b/series.conf
@@ -1914,6 +1914,7 @@
 	patches.kernel.org/6.17.8-526-watchdog-s3c2410_wdt-Fix-max_timeout-being-cal.patch
 	patches.kernel.org/6.17.8-527-crypto-sun8i-ce-remove-channel-timeout-field.patch
 	patches.kernel.org/6.17.8-528-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie_.patch
+	patches.kernel.org/6.17.8-529-crypto-ccp-Fix-incorrect-payload-size-calculat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
