--- a/series.conf
+++ b/series.conf
@@ -1998,6 +1998,7 @@
 	patches.kernel.org/6.17.8-610-crypto-hisilicon-qm-clear-all-VF-configuration.patch
 	patches.kernel.org/6.17.8-611-ASoC-ops-improve-snd_soc_get_volsw.patch
 	patches.kernel.org/6.17.8-612-PCI-PM-Skip-resuming-to-D0-if-device-is-discon.patch
+	patches.kernel.org/6.17.8-613-selftests-forwarding-Reorder-ar-ping-arguments.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
