--- a/series.conf
+++ b/series.conf
@@ -1839,6 +1839,7 @@
 	patches.kernel.org/6.17.8-451-bus-mhi-host-pci_generic-Add-support-for-all-F.patch
 	patches.kernel.org/6.17.8-452-drm-amdgpu-Correct-info-field-of-bad-page-thre.patch
 	patches.kernel.org/6.17.8-453-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
+	patches.kernel.org/6.17.8-454-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
