bnxt_en: Fix a possible memory leak in bnxt_ptp_init (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2166,6 +2166,7 @@
 	patches.kernel.org/6.17.8-778-octeontx2-pf-Fix-devm_kcalloc-error-checking.patch
 	patches.kernel.org/6.17.8-779-net-usb-qmi_wwan-initialize-MAC-header-offset-.patch
 	patches.kernel.org/6.17.8-780-bnxt_en-Shutdown-FW-DMA-in-bnxt_shutdown.patch
+	patches.kernel.org/6.17.8-781-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_ptp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
