--- a/series.conf
+++ b/series.conf
@@ -1784,6 +1784,7 @@
 	patches.kernel.org/6.17.8-396-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 	patches.kernel.org/6.17.8-397-mips-lantiq-danube-add-missing-device_type-in-.patch
 	patches.kernel.org/6.17.8-398-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
+	patches.kernel.org/6.17.8-399-mips-lantiq-danube-rename-stp-node-on-EASY5071.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
