--- a/series.conf
+++ b/series.conf
@@ -1685,6 +1685,7 @@
 	patches.kernel.org/6.17.8-297-powerpc-eeh-Use-result-of-error_detected-in-ue.patch
 	patches.kernel.org/6.17.8-298-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 	patches.kernel.org/6.17.8-299-bridge-Redirect-to-backup-port-when-port-is-ad.patch
+	patches.kernel.org/6.17.8-300-selftests-drv-net-wait-for-carrier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
