--- a/series.conf
+++ b/series.conf
@@ -2049,6 +2049,7 @@
 	patches.kernel.org/6.17.8-661-Bluetooth-ISO-Don-t-initiate-CIS-connections-i.patch
 	patches.kernel.org/6.17.8-662-Bluetooth-btusb-Check-for-unexpected-bytes-whe.patch
 	patches.kernel.org/6.17.8-663-Bluetooth-ISO-Use-sk_sndtimeo-as-conn_timeout.patch
+	patches.kernel.org/6.17.8-664-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
