scsi: ufs: host: mediatek: Assign power mode userdata before FASTAUTO mode change (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1689,6 +1689,7 @@
 	patches.kernel.org/6.17.8-301-net-phy-mscc-report-and-configure-in-band-auto.patch
 	patches.kernel.org/6.17.8-302-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer-.patch
 	patches.kernel.org/6.17.8-303-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-iss.patch
+	patches.kernel.org/6.17.8-304-scsi-ufs-host-mediatek-Assign-power-mode-userd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
