tcp: Update bind bucket state on port release (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2004,6 +2004,7 @@
 	patches.kernel.org/6.17.8-616-net-dsa-microchip-Set-SPI-as-bus-interface-dur.patch
 	patches.kernel.org/6.17.8-617-bng_en-make-bnge_alloc_ring-self-unwind-on-fai.patch
 	patches.kernel.org/6.17.8-618-ALSA-usb-audio-don-t-apply-interface-quirk-to-.patch
+	patches.kernel.org/6.17.8-619-tcp-Update-bind-bucket-state-on-port-release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
