--- a/series.conf
+++ b/series.conf
@@ -2035,6 +2035,7 @@
 	patches.kernel.org/6.17.8-647-drm-amdgpu-Fix-fence-signaling-race-condition-.patch
 	patches.kernel.org/6.17.8-648-ASoC-stm32-sai-manage-context-in-set_sysclk-ca.patch
 	patches.kernel.org/6.17.8-649-amd-amdkfd-enhance-kfd-process-check-in-switch.patch
+	patches.kernel.org/6.17.8-650-ASoC-tlv320aic3x-Fix-class-D-initialization-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
