drm/mediatek: Disable AFBC support on Mediatek DRM driver (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2129,6 +2129,7 @@
 	patches.kernel.org/6.17.8-741-btrfs-ensure-no-dirty-metadata-is-written-back.patch
 	patches.kernel.org/6.17.8-742-media-uvcvideo-Use-heuristic-to-find-stream-en.patch
 	patches.kernel.org/6.17.8-743-media-videobuf2-forbid-remove_bufs-when-legacy.patch
+	patches.kernel.org/6.17.8-744-drm-mediatek-Disable-AFBC-support-on-Mediatek-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
