--- a/series.conf
+++ b/series.conf
@@ -1625,6 +1625,7 @@
 	patches.kernel.org/6.17.8-237-drm-amd-display-Increase-AUX-Intra-Hop-Done-Ma.patch
 	patches.kernel.org/6.17.8-238-drm-amd-display-Fix-dmub_cmd-header-alignment.patch
 	patches.kernel.org/6.17.8-239-drm-amd-display-Cache-streams-targeting-link-w.patch
+	patches.kernel.org/6.17.8-240-drm-xe-guc-Add-more-GuC-load-error-status-code.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
