lan966x: Fix sleeping in atomic context (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2180,6 +2180,7 @@
 	patches.kernel.org/6.17.8-792-net-mlx5e-SHAMPO-Fix-header-formulas-for-highe.patch
 	patches.kernel.org/6.17.8-793-net-wan-framer-pef2256-Switch-to-devm_mfd_add_.patch
 	patches.kernel.org/6.17.8-794-net-dsa-microchip-Fix-reserved-multicast-addre.patch
+	patches.kernel.org/6.17.8-795-lan966x-Fix-sleeping-in-atomic-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
