--- a/series.conf
+++ b/series.conf
@@ -2169,6 +2169,7 @@
 	patches.kernel.org/6.17.8-781-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_ptp.patch
 	patches.kernel.org/6.17.8-782-bnxt_en-Fix-null-pointer-dereference-in-bnxt_b.patch
 	patches.kernel.org/6.17.8-783-bnxt_en-Always-provide-max-entry-and-entry-siz.patch
+	patches.kernel.org/6.17.8-784-bnxt_en-Fix-warning-in-bnxt_dl_reload_down.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
