--- a/series.conf
+++ b/series.conf
@@ -1778,6 +1778,7 @@
 	patches.kernel.org/6.17.8-390-drm-amd-display-Increase-minimum-clock-for-TMD.patch
 	patches.kernel.org/6.17.8-391-drm-amdgpu-Avoid-jpeg-v5.0.1-poison-irq-call-t.patch
 	patches.kernel.org/6.17.8-392-drm-amd-display-incorrect-conditions-for-faili.patch
+	patches.kernel.org/6.17.8-393-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-tr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
