--- a/series.conf
+++ b/series.conf
@@ -2003,6 +2003,7 @@
 	patches.kernel.org/6.17.8-615-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-2.patch
 	patches.kernel.org/6.17.8-616-net-dsa-microchip-Set-SPI-as-bus-interface-dur.patch
 	patches.kernel.org/6.17.8-617-bng_en-make-bnge_alloc_ring-self-unwind-on-fai.patch
+	patches.kernel.org/6.17.8-618-ALSA-usb-audio-don-t-apply-interface-quirk-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
