drm/amdkfd: Fix mmap write lock not release (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2115,6 +2115,7 @@
 	patches.kernel.org/6.17.8-727-kbuild-uapi-Strip-comments-before-size-type-ch.patch
 	patches.kernel.org/6.17.8-728-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polar.patch
 	patches.kernel.org/6.17.8-729-ASoC-rt722-add-settings-for-rt722VB.patch
+	patches.kernel.org/6.17.8-730-drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
