--- a/series.conf
+++ b/series.conf
@@ -1837,6 +1837,7 @@
 	patches.kernel.org/6.17.8-449-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-boo.patch
 	patches.kernel.org/6.17.8-450-iommu-apple-dart-Clear-stream-error-indicator-.patch
 	patches.kernel.org/6.17.8-451-bus-mhi-host-pci_generic-Add-support-for-all-F.patch
+	patches.kernel.org/6.17.8-452-drm-amdgpu-Correct-info-field-of-bad-page-thre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
