rtc: rx8025: fix incorrect register reference (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2197,6 +2197,7 @@
 	patches.kernel.org/6.17.8-809-iommufd-Don-t-overflow-during-division-for-dir.patch
 	patches.kernel.org/6.17.8-810-riscv-Fix-memory-leak-in-module_frob_arch_sect.patch
 	patches.kernel.org/6.17.8-811-parisc-Avoid-crash-due-to-unaligned-access-in-.patch
+	patches.kernel.org/6.17.8-812-rtc-rx8025-fix-incorrect-register-reference.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
