Bluetooth: ISO: Fix BIS connection dst_type handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1443,6 +1443,7 @@
 	patches.kernel.org/6.17.8-055-ASoC-mediatek-Fix-double-pm_runtime_disable-in.patch
 	patches.kernel.org/6.17.8-056-usbnet-Prevents-free-active-kevent.patch
 	patches.kernel.org/6.17.8-057-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_de.patch
+	patches.kernel.org/6.17.8-058-Bluetooth-ISO-Fix-BIS-connection-dst_type-hand.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
