drm/amdgpu: Add fallback to pipe reset if KCQ ring reset fails (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2031,6 +2031,7 @@
 	patches.kernel.org/6.17.8-643-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoid.patch
 	patches.kernel.org/6.17.8-644-ext4-increase-IO-priority-of-fastcommit.patch
 	patches.kernel.org/6.17.8-645-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_dev.patch
+	patches.kernel.org/6.17.8-646-drm-amdgpu-Add-fallback-to-pipe-reset-if-KCQ-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
