--- a/series.conf
+++ b/series.conf
@@ -2041,6 +2041,7 @@
 	patches.kernel.org/6.17.8-653-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-2.patch
 	patches.kernel.org/6.17.8-654-vfio-nvgrace-gpu-Add-GB300-SKU-to-the-devid-ta.patch
 	patches.kernel.org/6.17.8-655-selftest-net-Fix-error-message-if-empty-variab.patch
+	patches.kernel.org/6.17.8-656-net-mlx5e-Don-t-query-FEC-statistics-when-FEC-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
