--- a/series.conf
+++ b/series.conf
@@ -2175,6 +2175,7 @@
 	patches.kernel.org/6.17.8-787-io_uring-fix-types-for-region-size-calulation.patch
 	patches.kernel.org/6.17.8-788-net-mlx5e-Fix-return-value-in-case-of-module-E.patch
 	patches.kernel.org/6.17.8-789-net-ti-icssg-prueth-Fix-fdb-hash-size-configur.patch
+	patches.kernel.org/6.17.8-790-net-mlx5e-SHAMPO-Fix-header-mapping-for-64K-pa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
