x86/vsyscall: Do not require X86_PF_INSTR to emulate vsyscall (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1676,6 +1676,7 @@
 	patches.kernel.org/6.17.8-288-RDMA-mana_ib-Drain-send-wrs-of-GSI-QP.patch
 	patches.kernel.org/6.17.8-289-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE_.patch
 	patches.kernel.org/6.17.8-290-PCI-ERR-Update-device-error_state-already-afte.patch
+	patches.kernel.org/6.17.8-291-x86-vsyscall-Do-not-require-X86_PF_INSTR-to-em.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
