--- a/series.conf
+++ b/series.conf
@@ -1484,6 +1484,7 @@
 	patches.kernel.org/6.17.8-096-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMA.patch
 	patches.kernel.org/6.17.8-097-s390-mm-Fix-memory-leak-in-add_marker-when-kvr.patch
 	patches.kernel.org/6.17.8-098-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
+	patches.kernel.org/6.17.8-099-drm-sysfb-Do-not-dereference-NULL-pointer-in-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
