--- a/series.conf
+++ b/series.conf
@@ -2144,6 +2144,7 @@
 	patches.kernel.org/6.17.8-756-Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse.patch
 	patches.kernel.org/6.17.8-757-gve-Implement-gettimex64-with-EOPNOTSUPP.patch
 	patches.kernel.org/6.17.8-758-gve-Implement-settime64-with-EOPNOTSUPP.patch
+	patches.kernel.org/6.17.8-759-net-dsa-tag_brcm-legacy-fix-untagged-rx-on-unb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
