--- a/series.conf
+++ b/series.conf
@@ -1907,6 +1907,7 @@
 	patches.kernel.org/6.17.8-519-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOPO.patch
 	patches.kernel.org/6.17.8-520-PCI-AER-Fix-NULL-pointer-access-by-aer_info.patch
 	patches.kernel.org/6.17.8-521-selftests-Replace-sleep-with-slowwait.patch
+	patches.kernel.org/6.17.8-522-net-devmem-expose-tcp_recvmsg_locked-errors.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
