--- a/series.conf
+++ b/series.conf
@@ -1990,6 +1990,7 @@
 	patches.kernel.org/6.17.8-602-net-intel-fm10k-Fix-parameter-idx-set-but-not-.patch
 	patches.kernel.org/6.17.8-603-r8169-set-EEE-speed-down-ratio-to-1.patch
 	patches.kernel.org/6.17.8-604-PCI-cadence-Check-for-the-existence-of-cdns_pc.patch
+	patches.kernel.org/6.17.8-605-sparc-module-Add-R_SPARC_UA64-relocation-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
