RDMA/irdma: Remove unused struct irdma_cq fields (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2069,6 +2069,7 @@
 	patches.kernel.org/6.17.8-681-ACPICA-Update-dsmethod.c-to-get-rid-of-unused-.patch
 	patches.kernel.org/6.17.8-682-RDMA-bnxt_re-Fix-a-potential-memory-leak-in-de.patch
 	patches.kernel.org/6.17.8-683-RDMA-irdma-Fix-SD-index-calculation.patch
+	patches.kernel.org/6.17.8-684-RDMA-irdma-Remove-unused-struct-irdma_cq-field.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
