bpf: Sync pending IRQ work before freeing ring buffer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1428,6 +1428,7 @@
 	patches.kernel.org/6.17.8-040-wifi-mac80211-fix-key-tailroom-accounting-leak.patch
 	patches.kernel.org/6.17.8-041-wifi-nl80211-call-kfree-without-a-NULL-check.patch
 	patches.kernel.org/6.17.8-042-kunit-test_dev_action-Correctly-cast-priv-poin.patch
+	patches.kernel.org/6.17.8-043-bpf-Sync-pending-IRQ-work-before-freeing-ring-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
