drm/amd/display: Enable mst when it's detected but yet to be initialized (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2185,6 +2185,7 @@
 	patches.kernel.org/6.17.8-797-net-bridge-fix-MST-static-key-usage.patch
 	patches.kernel.org/6.17.8-798-selftests-vsock-avoid-false-positives-when-che.patch
 	patches.kernel.org/6.17.8-799-tracing-Fix-memory-leaks-in-create_field_var.patch
+	patches.kernel.org/6.17.8-800-drm-amd-display-Enable-mst-when-it-s-detected-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
