--- a/series.conf
+++ b/series.conf
@@ -1716,6 +1716,7 @@
 	patches.kernel.org/6.17.8-328-wifi-rtw89-8851b-rfk-update-IQK-TIA-setting.patch
 	patches.kernel.org/6.17.8-329-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 	patches.kernel.org/6.17.8-330-char-misc-Make-misc_register-reentry-for-miscd.patch
+	patches.kernel.org/6.17.8-331-char-misc-Does-not-request-module-for-miscdevi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
