--- a/series.conf
+++ b/series.conf
@@ -1909,6 +1909,7 @@
 	patches.kernel.org/6.17.8-521-selftests-Replace-sleep-with-slowwait.patch
 	patches.kernel.org/6.17.8-522-net-devmem-expose-tcp_recvmsg_locked-errors.patch
 	patches.kernel.org/6.17.8-523-selftests-net-lib.sh-Don-t-defer-failed-comman.patch
+	patches.kernel.org/6.17.8-524-udp_tunnel-use-netdev_warn-instead-of-netdev_W.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
