--- a/series.conf
+++ b/series.conf
@@ -1609,6 +1609,7 @@
 	patches.kernel.org/6.17.8-221-mfd-qnap-mcu-Include-linux-types.h-in-qnap-mcu.patch
 	patches.kernel.org/6.17.8-222-mfd-madera-Work-around-false-positive-Wininiti.patch
 	patches.kernel.org/6.17.8-223-mfd-da9063-Split-chip-variant-reading-in-two-b.patch
+	patches.kernel.org/6.17.8-224-mfd-macsmc-Add-apple-t8103-smc-compatible.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
