--- a/series.conf
+++ b/series.conf
@@ -2163,6 +2163,7 @@
 	patches.kernel.org/6.17.8-775-sctp-Hold-sock-lock-while-iterating-over-addre.patch
 	patches.kernel.org/6.17.8-776-net-ionic-add-dma_wmb-before-ringing-TX-doorbe.patch
 	patches.kernel.org/6.17.8-777-net-ionic-map-SKB-after-pseudo-header-checksum.patch
+	patches.kernel.org/6.17.8-778-octeontx2-pf-Fix-devm_kcalloc-error-checking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
