bpf: Conditionally include dynptr copy kfuncs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1451,6 +1451,7 @@
 	patches.kernel.org/6.17.8-063-Bluetooth-btintel_pcie-Fix-event-packet-loss-i.patch
 	patches.kernel.org/6.17.8-064-Bluetooth-hci_conn-Fix-connection-cleanup-with.patch
 	patches.kernel.org/6.17.8-065-Bluetooth-hci_core-Fix-tracking-of-periodic-ad.patch
+	patches.kernel.org/6.17.8-066-bpf-Conditionally-include-dynptr-copy-kfuncs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
