wifi: rtw89: wow: remove notify during WoWLAN net-detect (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1711,6 +1711,7 @@
 	patches.kernel.org/6.17.8-323-ASoC-Intel-avs-Do-not-share-the-name-pointer-b.patch
 	patches.kernel.org/6.17.8-324-ASoC-codecs-wsa883x-Handle-shared-reset-GPIO-f.patch
 	patches.kernel.org/6.17.8-325-drm-xe-Make-page-size-consistent-in-loop.patch
+	patches.kernel.org/6.17.8-326-wifi-rtw89-wow-remove-notify-during-WoWLAN-net.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
