ASoC: es8323: remove DAC enablement write from es8323_probe (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1706,6 +1706,7 @@
 	patches.kernel.org/6.17.8-318-iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-channe.patch
 	patches.kernel.org/6.17.8-319-iio-adc-imx93_adc-load-calibrated-values-even-.patch
 	patches.kernel.org/6.17.8-320-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethern.patch
+	patches.kernel.org/6.17.8-321-ASoC-es8323-remove-DAC-enablement-write-from-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
