--- a/series.conf
+++ b/series.conf
@@ -1916,6 +1916,7 @@
 	patches.kernel.org/6.17.8-528-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie_.patch
 	patches.kernel.org/6.17.8-529-crypto-ccp-Fix-incorrect-payload-size-calculat.patch
 	patches.kernel.org/6.17.8-530-crypto-caam-double-the-entropy-delay-interval-.patch
+	patches.kernel.org/6.17.8-531-can-rcar_canfd-Update-bit-rate-constants-for-R.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
