--- a/series.conf
+++ b/series.conf
@@ -1891,6 +1891,7 @@
 	patches.kernel.org/6.17.8-503-phy-cadence-cdns-dphy-Enable-lower-resolutions.patch
 	patches.kernel.org/6.17.8-504-Fix-access-to-video_is_primary_device-when-com.patch
 	patches.kernel.org/6.17.8-505-phy-renesas-r8a779f0-ether-serdes-add-new-step.patch
+	patches.kernel.org/6.17.8-506-phy-rockchip-phy-rockchip-inno-csidphy-allow-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
