mfd: core: Increment of_node's refcount before linking it to the platform device (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1610,6 +1610,7 @@
 	patches.kernel.org/6.17.8-222-mfd-madera-Work-around-false-positive-Wininiti.patch
 	patches.kernel.org/6.17.8-223-mfd-da9063-Split-chip-variant-reading-in-two-b.patch
 	patches.kernel.org/6.17.8-224-mfd-macsmc-Add-apple-t8103-smc-compatible.patch
+	patches.kernel.org/6.17.8-225-mfd-core-Increment-of_node-s-refcount-before-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
