selftests: Replace sleep with slowwait (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1906,6 +1906,7 @@
 	patches.kernel.org/6.17.8-518-selftests-Disable-dad-for-ipv6-in-fcnal-test.s.patch
 	patches.kernel.org/6.17.8-519-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOPO.patch
 	patches.kernel.org/6.17.8-520-PCI-AER-Fix-NULL-pointer-access-by-aer_info.patch
+	patches.kernel.org/6.17.8-521-selftests-Replace-sleep-with-slowwait.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
