--- a/series.conf
+++ b/series.conf
@@ -1502,6 +1502,7 @@
 	patches.kernel.org/6.17.8-114-PM-hibernate-Combine-return-paths-in-power_dow.patch
 	patches.kernel.org/6.17.8-115-PM-sleep-Allow-pm_restrict_gfp_mask-stacking.patch
 	patches.kernel.org/6.17.8-116-mfd-kempld-Switch-back-to-earlier-init-behavio.patch
+	patches.kernel.org/6.17.8-117-usb-gadget-f_fs-Fix-epfile-null-pointer-access.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
