--- a/series.conf
+++ b/series.conf
@@ -2043,6 +2043,7 @@
 	patches.kernel.org/6.17.8-655-selftest-net-Fix-error-message-if-empty-variab.patch
 	patches.kernel.org/6.17.8-656-net-mlx5e-Don-t-query-FEC-statistics-when-FEC-.patch
 	patches.kernel.org/6.17.8-657-Bluetooth-btintel-Add-support-for-BlazarIW-cor.patch
+	patches.kernel.org/6.17.8-658-net-macb-avoid-dealing-with-endianness-in-macb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
