inet_diag: annotate data-races in inet_diag_bc_sk() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1785,6 +1785,7 @@
 	patches.kernel.org/6.17.8-397-mips-lantiq-danube-add-missing-device_type-in-.patch
 	patches.kernel.org/6.17.8-398-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
 	patches.kernel.org/6.17.8-399-mips-lantiq-danube-rename-stp-node-on-EASY5071.patch
+	patches.kernel.org/6.17.8-400-inet_diag-annotate-data-races-in-inet_diag_bc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
