irqchip/sifive-plic: Respect mask state when setting affinity (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1518,6 +1518,7 @@
 	patches.kernel.org/6.17.8-130-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-logi.patch
 	patches.kernel.org/6.17.8-131-firmware-ti_sci-Enable-abort-handling-of-entry.patch
 	patches.kernel.org/6.17.8-132-firewire-ohci-move-self_id_complete-tracepoint.patch
+	patches.kernel.org/6.17.8-133-irqchip-sifive-plic-Respect-mask-state-when-se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
