--- a/series.conf
+++ b/series.conf
@@ -2008,6 +2008,7 @@
 	patches.kernel.org/6.17.8-620-ovl-make-sure-that-ovl_create_real-returns-a-h.patch
 	patches.kernel.org/6.17.8-621-drm-amd-display-Add-missing-post-flip-calls.patch
 	patches.kernel.org/6.17.8-622-drm-amd-display-Add-AVI-infoframe-copy-in-copy.patch
+	patches.kernel.org/6.17.8-623-drm-amd-display-Add-fast-sync-field-in-ultra-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
