drm/sched: avoid killing parent entity on child SIGKILL (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1485,6 +1485,7 @@
 	patches.kernel.org/6.17.8-097-s390-mm-Fix-memory-leak-in-add_marker-when-kvr.patch
 	patches.kernel.org/6.17.8-098-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 	patches.kernel.org/6.17.8-099-drm-sysfb-Do-not-dereference-NULL-pointer-in-p.patch
+	patches.kernel.org/6.17.8-100-drm-sched-avoid-killing-parent-entity-on-child.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
