--- a/series.conf
+++ b/series.conf
@@ -1890,6 +1890,7 @@
 	patches.kernel.org/6.17.8-502-fbcon-Use-screen-info-to-find-primary-device.patch
 	patches.kernel.org/6.17.8-503-phy-cadence-cdns-dphy-Enable-lower-resolutions.patch
 	patches.kernel.org/6.17.8-504-Fix-access-to-video_is_primary_device-when-com.patch
+	patches.kernel.org/6.17.8-505-phy-renesas-r8a779f0-ether-serdes-add-new-step.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
