--- a/series.conf
+++ b/series.conf
@@ -1565,6 +1565,7 @@
 	patches.kernel.org/6.17.8-177-tee-allow-a-driver-to-allocate-a-tee_device-wi.patch
 	patches.kernel.org/6.17.8-178-nvmet-fc-avoid-scheduling-association-deletion.patch
 	patches.kernel.org/6.17.8-179-nvme-fc-use-lock-accessing-port_state-and-rpor.patch
+	patches.kernel.org/6.17.8-180-kunit-Enable-PCI-on-UML-without-triggering-WAR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
