LoongArch: Handle new atomic instructions for probes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2103,6 +2103,7 @@
 	patches.kernel.org/6.17.8-715-scsi-ufs-core-Include-UTP-error-in-INT_FATAL_E.patch
 	patches.kernel.org/6.17.8-716-fbdev-core-Fix-ubsan-warning-in-pixel_to_pat.patch
 	patches.kernel.org/6.17.8-717-ACPI-property-Return-present-device-nodes-only.patch
+	patches.kernel.org/6.17.8-718-LoongArch-Handle-new-atomic-instructions-for-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
