wifi: cfg80211: add an hrtimer based delayed work item (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2186,6 +2186,7 @@
 	patches.kernel.org/6.17.8-798-selftests-vsock-avoid-false-positives-when-che.patch
 	patches.kernel.org/6.17.8-799-tracing-Fix-memory-leaks-in-create_field_var.patch
 	patches.kernel.org/6.17.8-800-drm-amd-display-Enable-mst-when-it-s-detected-.patch
+	patches.kernel.org/6.17.8-801-wifi-cfg80211-add-an-hrtimer-based-delayed-wor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
