idpf: do not linearize big TSO packets (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1727,6 +1727,7 @@
 	patches.kernel.org/6.17.8-339-tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.kernel.org/6.17.8-340-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-eff.patch
 	patches.kernel.org/6.17.8-341-Octeontx2-af-Broadcast-XON-on-all-channels.patch
+	patches.kernel.org/6.17.8-342-idpf-do-not-linearize-big-TSO-packets.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
