drm/msm/adreno: Add fenced regwrite support (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1859,6 +1859,7 @@
 	patches.kernel.org/6.17.8-471-drm-msm-make-sure-to-not-queue-up-recovery-mor.patch
 	patches.kernel.org/6.17.8-472-char-Use-list_del_init-in-misc_deregister-to-r.patch
 	patches.kernel.org/6.17.8-473-drm-msm-adreno-Add-speedbin-data-for-A623-GPU.patch
+	patches.kernel.org/6.17.8-474-drm-msm-adreno-Add-fenced-regwrite-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
