extcon: adc-jack: Cleanup wakeup source only if it was enabled (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2220,6 +2220,7 @@
 	patches.kernel.org/6.17.8-832-scsi-ufs-core-Add-a-quirk-to-suppress-link_sta.patch
 	patches.kernel.org/6.17.8-833-scsi-ufs-core-Fix-invalid-probe-error-return-v.patch
 	patches.kernel.org/6.17.8-834-drm-amd-display-update-color-on-atomic-commit-.patch
+	patches.kernel.org/6.17.8-835-extcon-adc-jack-Cleanup-wakeup-source-only-if-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
