ACPI: fan: Use platform device for devres-related actions (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1396,6 +1396,7 @@
 	patches.kernel.org/6.17.8-008-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.kernel.org/6.17.8-009-ACPI-video-Fix-use-after-free-in-acpi_video_sw.patch
 	patches.kernel.org/6.17.8-010-ACPI-button-Call-input_free_device-on-failing-.patch
+	patches.kernel.org/6.17.8-011-ACPI-fan-Use-platform-device-for-devres-relate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
