--- a/series.conf
+++ b/series.conf
@@ -1631,6 +1631,7 @@
 	patches.kernel.org/6.17.8-243-drm-amdgpu-Fix-build-error-when-CONFIG_SUSPEND.patch
 	patches.kernel.org/6.17.8-244-drm-amdgpu-Update-IPID-value-for-bad-page-thre.patch
 	patches.kernel.org/6.17.8-245-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-rese.patch
+	patches.kernel.org/6.17.8-246-drm-amdgpu-Effective-health-check-before-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
