tty: serial: Modify the use of dev_err_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1724,6 +1724,7 @@
 	patches.kernel.org/6.17.8-336-f2fs-fix-to-detect-potential-corrupted-nid-in-.patch
 	patches.kernel.org/6.17.8-337-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm.patch
 	patches.kernel.org/6.17.8-338-bnxt_en-Add-Hyper-V-VF-ID.patch
+	patches.kernel.org/6.17.8-339-tty-serial-Modify-the-use-of-dev_err_probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
