--- a/series.conf
+++ b/series.conf
@@ -1896,6 +1896,7 @@
 	patches.kernel.org/6.17.8-508-net-sh_eth-Disable-WoL-if-system-can-not-suspe.patch
 	patches.kernel.org/6.17.8-509-selftests-net-replace-sleeps-in-fcnal-test-wit.patch
 	patches.kernel.org/6.17.8-510-media-redrat3-use-int-type-to-store-negative-e.patch
+	patches.kernel.org/6.17.8-511-platform-x86-amd-pmf-Fix-the-custom-bios-input.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
